Change the structure of the page & structure code

--- a/particlesjs-config.json
+++ b/particlesjs-config.json
@@ -1,7 +1,7 @@
 {
   "particles": {
     "number": {
-      "value": 223,
+      "value": 70,
       "density": {
         "enable": true,
         "value_area": 868.0624057955
@@ -72,7 +72,7 @@
     "events": {
       "onhover": {
         "enable": true,
-        "mode": "grab"
+        "mode": "repulse"
       },
       "onclick": {
         "enable": true,
